<resources>
    <string name="app_name">Queuetube</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="player">Youtube Player</string>
    <string name="search_title">Search</string>
    <string name="return_title">Return</string>
    <string name="tab_search">Search</string>
    <string name="tab_player">Player</string>
    <string name="youtube_player_tag">youtube_player</string>
    <string name="queue_empty_text">Your queue is empty</string>
    <string name="search_results_empty_text">There are no search results</string>
    <string name="add_videos_text">Add videos in \nthe search tab</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Australia</item>
        <item>Austria</item>
        <item>Belgium</item>
        <item>Canada</item>
        <item>Denmark</item>
        <item>Germany</item>
        <item>Ireland</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Norway</item>
        <item>Sweden</item>
        <item>United Kingdom</item>
        <item>United States</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>AU</item>
        <item>AT</item>
        <item>BE</item>
        <item>CA</item>
        <item>DK</item>
        <item>DE</item>
        <item>IE</item>
        <item>NL</item>
        <item>NZ</item>
        <item>NO</item>
        <item>SE</item>
        <item>GB</item>
        <item>US</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="enable_notifications_title">Enable notifications</string>
    <string name="enable_notifications_key">enable_notifications</string>
    <string name="enable_autoplay_key">enable_autoplay</string>
    <string name="enable_autoplay_title">Enable autoplay</string>
    <string name="summary_about">Queuetube is a version of YouTube that uses playlists.</string>
    <string name="app_version">1.0.0</string>
    <string name="version_title">Version</string>
    <string name="send_feedback_key">send_feedback</string>
    <string name="summary_support">Report technical issues or suggest new features</string>
    <string name="send_feedback_title">Send feedback</string>
    <string name="choose_email_client">Choose email client</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="save_history_title">Save history</string>
    <string name="save_history_key">save_history</string>
    <string name="select_region_key">select_region</string>
    <string name="select_region_title">Select region</string>
    <string name="select_region_summary">Select a region on which content will be based</string>
    <string name="save_history_summary">Save history of watched videos</string>
    <string name="enable_autoplay_summary">Use autoplay to play next video when the queue is empty</string>
    <string name="enable_notifications_summary">Display notification of currently playing video</string>
    <string name="recently_watched_empty_text">You have not watched anything yet</string>
    <string name="recommended_empty_text">There are no recommended videos</string>
    <string name="app_intro">Queuetube Intro</string>
</resources>
