<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="General">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/enable_autoplay_key"
            android:title="@string/enable_autoplay_title" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/save_history_key"
            android:title="@string/save_history_title" />

        <ListPreference
            android:defaultValue="US"
            android:entries="@array/list_preference_entries"
            android:entryValues="@array/list_preference_entry_values"
            android:key="@string/select_region_key"
            android:title="@string/select_region_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/enable_notifications_key"
            android:title="@string/enable_notifications_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="About">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/version_title" />

        <Preference
            android:key="@string/send_feedback_key"
            android:summary="@string/summary_support"
            android:title="@string/send_feedback_title" />


    </PreferenceCategory>

</PreferenceScreen>